src/objects/Delegate__c.object
<CustomObject>
    <description>This object stores the delegate records.</description>
    <fields>
        <fullName>Active__c</fullName>
        <formula>AND ( 
     End_Date__c &gt; TODAY(),  
     ISPICKVAL (Approval_Status__c, &quot;APPROVED&quot;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agreement_Amount_estimated_Bypass__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Agreement Amount (estimated) Bypass &gt;</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agreement_Amount_estimated_Bypass_lt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Agreement Amount (estimated) Bypass &lt;</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agreement_Amount_estimated__c</fullName>
        <label>Agreement Amount (estimated) &gt;</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Agreement_Amount_estimated_lt__c</fullName>
        <label>Agreement Amount (estimated) &lt;</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Allowed_Organizations__c</fullName>
        <label>Allowed Organizations</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <description>Status if the approval process requiring all delegations to be approved by Supervisor of the delegator and Geo Delegation Administrator</description>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Backlog_Value_Bypass__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Backlog Value Bypass &gt;</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Backlog_Value_Bypass_lt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Backlog Value Bypass &lt;</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Backlog_Value__c</fullName>
        <label>Backlog Value &gt;</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Backlog_Value_lt__c</fullName>
        <label>Backlog Value &lt;</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Delegate_Business_Title__c</fullName>
        <formula>Delegate__r.pse__Salesforce_User__r.Business_Card_Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delegate Business Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delegate_HR_Supervisor__c</fullName>
        <formula>Delegate__r.pse__Salesforce_User__r.Manager_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delegate HR Supervisor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delegate_Job_Name__c</fullName>
        <formula>Delegate__r.pse__Salesforce_User__r.JobName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delegate Job Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delegate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Delegated to contact. Contact to whom a role has been delegated.</description>
        <label>Delegate</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Contact.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <filterItems>
                <field>Contact.pse__Is_Resource__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Delegates</relationshipLabel>
        <relationshipName>Delegates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delegator_Supervisor_Email__c</fullName>
        <defaultValue>$User.Manager_Email__c</defaultValue>
        <label>Delegator Supervisor Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Delegator_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User associated to the contact populated in Delegator field</description>
        <label>Delegator User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Delegates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delegator__c</fullName>
        <description>The contact who delegates to another contact</description>
        <label>Delegator</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>My Delegates</relationshipLabel>
        <relationshipName>Delegates1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>Date on which the delegation would end</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Key_Member_Role__c</fullName>
        <description>The role for which delegation is done</description>
        <label>Key Member Role</label>
        <picklist>
            <picklistValues>
                <fullName>Project Approver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Accountant</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Project_Net_Margin_Value_Bypass__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Project Net Margin (Value) Bypass &gt;</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Net_Margin_Value_Bypass_lt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Project Net Margin (Value) Bypass &lt;</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Net_Margin_Value__c</fullName>
        <label>Project Approved Net Margin (Value) &gt;</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project_Net_Margin_Value_lt__c</fullName>
        <label>Project Approved Net Margin (Value) &lt;</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project_Net_Margin_age_of_NSR_Bypass__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Project Net Margin (% of NSR) Bypass &gt;</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Net_Margin_age_of_NSR__c</fullName>
        <label>Project Approved Net Margin (% of NSR) &gt;</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Project_Net_Margin_age_of_NSR_lt__c</fullName>
        <label>Project Approved Net Margin (% of NSR) &lt;</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Project_Net_Margin_of_NSR_Bypass_lt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Project Net Margin (% of NSR) Bypass &lt;</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Revenue_Budget_Bypass__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Project Revenue Budget Bypass &gt;</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Revenue_Budget_Bypass_lt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Project Revenue Budget Bypass &lt;</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Revenue_Budget__c</fullName>
        <label>Project Approved Revenue Budget &gt;</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project_Revenue_Budget_lt__c</fullName>
        <label>Project Approved Revenue Budget &lt;</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project_Review_Category_C_0_Bypass__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Project Review Category C-0 Bypass</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Review_Category_C_0__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Project Review Category C-0</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Review_Category_C_1_Bypass__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Project Review Category C-1 Bypass</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Review_Category_C_1__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Project Review Category C-1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Review_Category_C_2_Bypass__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Project Review Category C-2 Bypass</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Review_Category_C_2__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Project Review Category C-2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Date at which the delegation would begin</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Value_change_Forecast_Nt_Margn_Byps_lt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Value change in Forecast Nt Margn Byps &lt;</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Value_change_in_Forecast_Net_Margin_Byps__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Value change in Forecast Nt Margn Byps &gt;</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Value_change_in_Forecast_Net_Margin__c</fullName>
        <label>Value change in Forecast Net Margin &gt;</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Value_change_in_Forecast_Net_Margin_lt__c</fullName>
        <label>Value change in Forecast Net Margin &lt;</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>age_Change_in_Forecast_Net_Margin_Byp_lt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>%age Change in Forecast Net Margin Byp &lt;</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>age_Change_in_Forecast_Net_Margin_Bypass__c</fullName>
        <defaultValue>false</defaultValue>
        <label>%age Change in Forecast Net Margin Byp &gt;</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>age_Change_in_Forecast_Net_Margin__c</fullName>
        <label>%age Change in Forecast Net Margin &gt;</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>age_Change_in_Forecast_Net_Margin_lt__c</fullName>
        <label>%age Change in Forecast Net Margin &lt;</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Delegate</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Delegate__c</columns>
        <columns>Delegator__c</columns>
        <columns>Key_Member_Role__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>DLGT-{0000000000}</displayFormat>
        <label>Delegate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Delegates</pluralLabel>
    <recordTypes>
        <fullName>Administrator_Override</fullName>
        <active>true</active>
        <label>Administrator Override</label>
    </recordTypes>
    <recordTypes>
        <fullName>Alternate</fullName>
        <active>true</active>
        <label>Alternate</label>
    </recordTypes>
    <recordTypes>
        <fullName>Key_Roles</fullName>
        <active>true</active>
        <label>Key Roles</label>
    </recordTypes>
    <recordTypes>
        <fullName>Vacation</fullName>
        <active>true</active>
        <label>Vacation</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Agreement_Amount_Cannot_Be_Null</fullName>
        <active>true</active>
        <errorConditionFormula>AND(RecordType.Name == &apos;Key Roles&apos;,  ISNULL(Agreement_Amount_estimated__c))</errorConditionFormula>
        <errorDisplayField>Agreement_Amount_estimated__c</errorDisplayField>
        <errorMessage>Cannot be Null</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Agreement_Amount_lt_Cannot_Be_Null</fullName>
        <active>true</active>
        <errorConditionFormula>AND(RecordType.Name == &apos;Key Roles&apos;,  ISNULL(Agreement_Amount_estimated_lt__c))</errorConditionFormula>
        <errorDisplayField>Agreement_Amount_estimated_lt__c</errorDisplayField>
        <errorMessage>Cannot be Null</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Backlog_Value_Not_Null</fullName>
        <active>true</active>
        <errorConditionFormula>AND(RecordType.Name == &apos;Key Roles&apos;,  ISNULL(Backlog_Value__c))</errorConditionFormula>
        <errorDisplayField>Backlog_Value__c</errorDisplayField>
        <errorMessage>Cannot Be Null</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Backlog_Value_lt_Not_Null</fullName>
        <active>true</active>
        <errorConditionFormula>AND(RecordType.Name == &apos;Key Roles&apos;,  ISNULL(Backlog_Value_lt__c))</errorConditionFormula>
        <errorDisplayField>Backlog_Value_lt__c</errorDisplayField>
        <errorMessage>Cannot Be Null</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Project_Net_Margin_Value_Not_Null</fullName>
        <active>true</active>
        <errorConditionFormula>AND(RecordType.Name == &apos;Key Roles&apos;,  ISNULL(Project_Net_Margin_Value__c))</errorConditionFormula>
        <errorDisplayField>Project_Net_Margin_Value__c</errorDisplayField>
        <errorMessage>Cannot Be Null</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Project_Net_Margin_Value_lt_Not_Null</fullName>
        <active>true</active>
        <errorConditionFormula>AND(RecordType.Name == &apos;Key Roles&apos;,  ISNULL(Project_Net_Margin_Value_lt__c))</errorConditionFormula>
        <errorDisplayField>Project_Net_Margin_Value_lt__c</errorDisplayField>
        <errorMessage>Cannot Be Null</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Project_Net_Margin_age_of_NSR_lt_null</fullName>
        <active>true</active>
        <errorConditionFormula>AND(RecordType.Name == &apos;Key Roles&apos;,  ISNULL( Project_Net_Margin_age_of_NSR_lt__c))</errorConditionFormula>
        <errorDisplayField>Project_Net_Margin_age_of_NSR_lt__c</errorDisplayField>
        <errorMessage>Cannot Be Null</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Project_Net_Margin_age_of_NSR_not_null</fullName>
        <active>true</active>
        <errorConditionFormula>AND(RecordType.Name == &apos;Key Roles&apos;,  ISNULL( Project_Net_Margin_age_of_NSR__c))</errorConditionFormula>
        <errorDisplayField>Project_Net_Margin_age_of_NSR__c</errorDisplayField>
        <errorMessage>Cannot Be Null</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Project_Revenue_Budget_Not_Null</fullName>
        <active>true</active>
        <errorConditionFormula>AND(RecordType.Name == &apos;Key Roles&apos;,  ISNULL(Project_Revenue_Budget__c))</errorConditionFormula>
        <errorDisplayField>Project_Revenue_Budget__c</errorDisplayField>
        <errorMessage>Cannot Be Null</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Project_Revenue_Budget_lt_Null</fullName>
        <active>true</active>
        <errorConditionFormula>AND(RecordType.Name == &apos;Key Roles&apos;,  ISNULL(Project_Revenue_Budget_lt__c))</errorConditionFormula>
        <errorDisplayField>Project_Revenue_Budget_lt__c</errorDisplayField>
        <errorMessage>Cannot Be Null</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_Date_Before_End_Date</fullName>
        <active>true</active>
        <description>Verify the start date value is before the end date value</description>
        <errorConditionFormula>Start_Date__c &gt; End_Date__c</errorConditionFormula>
        <errorDisplayField>Start_Date__c</errorDisplayField>
        <errorMessage>The Start Date must precede the End Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Value_change_in_Forecast_Net_Mar_lt_Null</fullName>
        <active>true</active>
        <errorConditionFormula>AND(RecordType.Name == &apos;Key Roles&apos;,  ISNULL(Value_change_in_Forecast_Net_Margin_lt__c))</errorConditionFormula>
        <errorDisplayField>Value_change_in_Forecast_Net_Margin_lt__c</errorDisplayField>
        <errorMessage>Cannot Be Null</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Value_change_in_Forecast_Net_Margin_Null</fullName>
        <active>true</active>
        <errorConditionFormula>AND(RecordType.Name == &apos;Key Roles&apos;,  ISNULL(Value_change_in_Forecast_Net_Margin__c))</errorConditionFormula>
        <errorDisplayField>Value_change_in_Forecast_Net_Margin__c</errorDisplayField>
        <errorMessage>Cannot Be Null</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>age_Change_in_Forecast_Net_Margin_null</fullName>
        <active>true</active>
        <errorConditionFormula>AND(RecordType.Name == &apos;Key Roles&apos;,  ISNULL( age_Change_in_Forecast_Net_Margin__c ))</errorConditionFormula>
        <errorDisplayField>age_Change_in_Forecast_Net_Margin__c</errorDisplayField>
        <errorMessage>Cannot Be Null</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>age_Change_in_Forecast_Net_Marginlt_null</fullName>
        <active>true</active>
        <errorConditionFormula>AND(RecordType.Name == &apos;Key Roles&apos;,  ISNULL( age_Change_in_Forecast_Net_Margin_lt__c ))</errorConditionFormula>
        <errorDisplayField>age_Change_in_Forecast_Net_Margin_lt__c</errorDisplayField>
        <errorMessage>Cannot Be Null</errorMessage>
    </validationRules>
</CustomObject>